# QtJack

./: CMakeLists.txt  README.md  main.cpp
common/: Constants.h  Strings.h  Styles.h
framework/: App.h  Button.h  Label.h  Layouts.h  Window.h
model/: BlackjackModel.cpp  BlackjackModel.h
view/: BlackjackWindow.cpp  BlackjackWindow.h
viewmodel/: BlackjackViewModel.cpp  BlackjackViewModel.h
